# async-pixiv-api

./: .gitignore  README.md  pyproject.toml
src/pixiv/: exceptions.py
src/pixiv/_abc/: _api.py  _client.py  _config.py  _model.py
src/pixiv/_utils/: net.py  net.pyi  typedefs.py
src/pixiv/app/: __init__.py  client.py  config.py  model.py
src/pixiv/app/api/: base.py  illust.py  illust.pyi  user.py  user.pyi
src/pixiv/app/model/: __init__.py  base.py  illust.py  novel.py  other.py  param.py  user.py
src/pixiv/web/: __init__.py  client.py  config.py
tests/: test_app.py  test_limiter.py
