[project]
name = "async-pixiv-api"
version = "0.0.1"
requires-python = ">=3.14"
dependencies = [
    "aiocache[memcached]>=0.12.3",
    "aiohttp-socks>=0.11.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.0",
    "pydantic[email,timezone]>=2.13.3",
    "pyrate-limiter>=4.1.0",
    "python-dotenv[cli]",
]

[dependency-groups]
speedups = [
    "ujson>=5.12.0",
]
