[project]
name = "async-pixiv-api"
version = "0.0.1"
description = "Async Pixiv API wrapper for Python3.14+"
authors = [
    { name = "PyreZ", email = "pyre_z@gmail.com" },
]
requires-python = ">=3.14"
dependencies = [
    "aiocache[memcached]>=0.12.3",
    "aiohttp-socks>=0.11.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.0",
    "pydantic[email,timezone]>=2.13.3",
    "pyrate-limiter>=4.1.0",
    "python-dotenv[cli]",
]

[dependency-groups]
dev = [
    "logre",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
speedups = [
    "ujson>=5.12.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"

[tool.uv.sources]
logre = { git = "https://github.com/pyre-z/logre.git" }
